<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Welcome to the GPS Tracker!</string>
    <string name="app_name">GPS Tracker</string>
    <string name="quit">Quit</string>
    <string name="menu">Choose a function:</string>
    <string name="view">View Map</string>
    <string name="change">Check Frequency</string>
    <string name="change_explanation">Input </string>
    <string name="settings">Frequency Settings</string>
    <string name="change_freq">Number of seconds between GPS location retrieval:</string>
    <string name="back">Back</string>
    <string name="login">Log In</string>
    <string name="ipAddr">IP Address</string>
    <string name="portNum">Port Number</string>
    <string name="defaultIP">192.168.0.1</string>
    <string name="defaultPort">12345</string>
    <string name="gpscheck">Check Arduino Locations</string>
    <string name="phonecheck">Check Phone Locations</string>
    <string name="chase">Chase</string>
    <string name="navito">Navi To</string>
    <string name="nchase">Go and have some food</string>
    <string name="refresh">Stop</string>
    <string name="phone">Phone</string>
    <string name="arduino">Arduino</string>
    <string name="celltitle">Phone Location Database</string>
    <string name="gpstitle">Arduino Location Database</string>
    <string name="ok">OK</string>
    <string name="change_num">Number of GPS Locations from Arduino</string>
    <string name="submit">Submit</string>
    
</resources>