<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:textColor="#66FF33"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/view"
        android:layout_width="fill_parent"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="onViewClick"
        android:text="@string/view" >
    </Button>

    <Button
        android:layout_width="fill_parent"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="onGpsDBClick"
        android:text="@string/gpscheck" >
    </Button>

    <Button
        android:layout_width="fill_parent"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="onPhoneDBClick"
        android:text="@string/phonecheck" >
    </Button>

    <Button
        android:id="@+id/change"
        android:layout_width="fill_parent"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="onChangeClick"
        android:text="@string/change" >
    </Button>

    <Button
        android:id="@+id/quit"
        android:layout_width="fill_parent"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="onQuitClick"
        android:text="@string/quit" >
    </Button>

</LinearLayout> 